--- a/LNMP-docker-compose-10.yml
+++ b/LNMP-docker-compose-10.yml
@@ -1,19 +1,18 @@
 
 services:
   nginx:
-    image: nginx:alpine
+    image: openresty/openresty:alpine-fat
     container_name: nginx
-    restart: always
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
       - "443:443/udp"      
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
       - ./conf.d:/etc/nginx/conf.d
-      - ./certs:/etc/nginx/certs
-      - ./html:/var/www/html
-      - ./log/nginx:/var/log/nginx
+      - ./certs:/opt/openresty/nginx/conf/certs
+      - ./html:/var/www/html/
+      - ./nginx/log:/var/log/openresty
     tmpfs:
       - /var/cache/nginx:rw,noexec,nosuid,size=512m
 
@@ -21,21 +20,23 @@ services:
   php:
     image: php:fpm-alpine
     container_name: php
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./html:/var/www/html
+    user: "www-data:www-data"      
 
   php74:
     image: php:7.4-fpm-alpine
     container_name: php74
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./html:/var/www/html
+    user: "www-data:www-data"      
 
   mysql:
     image: mysql
     container_name: mysql
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./mysql:/var/lib/mysql
     environment:
@@ -44,7 +45,7 @@ services:
       MYSQL_PASSWORD: kejilionYYDS
 
   redis:
-    image: redis:alpine
+    image: redis-alpine
     container_name: redis
     restart: always
     volumes:
