--- a/LNMP-docker-compose-10.yml
+++ b/LNMP-docker-compose-10.yml
@@ -47,6 +47,6 @@ services:
   redis:
     image: redis:alpine
     container_name: redis
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./redis:/data
