--- a/LNMP-docker-compose-10.yml
+++ b/LNMP-docker-compose-10.yml
@@ -9,7 +9,7 @@ services:
       - "443:443"
       - "443:443/udp"      
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf
       - ./conf.d:/etc/nginx/conf.d
       - ./certs:/opt/openresty/nginx/conf/certs
       - ./html:/var/www/html/
